# MusIQ-Lab

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  INSTALL.md  README.md  SECURITY.md  constraints-torch27-cu126.txt  requirements-dev.txt  requirements-linux-cu126.txt  requirements.txt
webui/: CHANGELOG.md  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  run.bat  webui.ps1
webui/static/: index.html
webui/tests/: conftest.py  test_analyze_runner.py  test_audio.py  test_audio_clock.py  test_audio_devices.py  test_audio_open_chain.py  test_audio_stream.py  test_audio_ws_protocol.py  test_chat.py  test_chat_actor.py  test_essentia_reader.py  test_f0.py  test_identify_reader.py  test_identify_round2.py  test_identify_round3.py  test_identify_round4.py  (+12 more)
webui/tests-e2e/: .gitignore  analyze-upload.spec.js  analyze-youtube.spec.js  live-mic.spec.js  package-lock.json  package.json  playwright.config.js  rename.spec.js  viewer.spec.js  visual-review.spec.js
webui/tests-js/: acoustic-profile.test.js  analyze-modal.test.js  analyze-shared.test.js  coords.test.js  crosscheck-card.test.js  crosscheck-row.test.js  f0-overlay-smooth.test.js  f0-prefs.test.js  menus.test.js  metadata-card.test.js  mic-overlay.test.js  mic-pitch-integration.test.js  mic-pitch.test.js  mic-row.test.js  mic-yin.test.js  notation.test.js  tags-row.test.js  theme-apply.test.js  theme-css-tokens.test.js  theme-derive.test.js  theme-presets.test.js  theme-store.test.js  track-data.test.js  track-picker.test.js  view-state.test.js  wasapi-engine.test.js  xcheck.test.js
(+440 files in other folders)
