[project]
name = "webui"
version = "0.2.0"
description = "MusIQ-Lab local web UI for the analysis pipeline"
requires-python = ">=3.13"
license = "AGPL-3.0-or-later"
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
include = ["webui*"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
